--- a/templates/user/dashboard.html.twig
+++ b/templates/user/dashboard.html.twig
@@ -127,7 +127,7 @@
     <p class="text-muted">Aucun devis trouvé.</p>
 {% endif %}
                 <div class="text-center mt-5">
-        <a href="{{ path('user_factures', {id: user.id}) }}" class="btn btn-secondary btn-lg">voir d'autres devis</a>
+        <a href="{{ path('user_devis', {id: user.id}) }}" class="btn btn-secondary btn-lg">voir d'autres devis</a>
     </div>
 			</div>
 		</div>
