--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -122,10 +122,11 @@
             <div class="footer-column">
                 <h3>Suivez-nous</h3>
                 <ul class="footer-socials">
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                   <li><a href="https://www.facebook.com/profile.php?id=61567529041393" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></li>
+
+                    <li><a href="https://x.com/homerenov91" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/homerenov91/"  target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://www.instagram.com/home.renov91/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
