--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -140,7 +140,7 @@
             </ul>
         </div>
 
-        <!-- Copyright -->
+        
         <div class="footer-bottom">
             <p>&copy; 2024 HomeRenov91 - Tous droits réservés</p>
         </div>
@@ -150,16 +150,59 @@
     <i class="fas fa-arrow-up"></i>
 </a>
 
+<!-- Bannière de consentement aux cookies -->
+<div class="cookie-banner" id="cookieBanner">
+    <p class="cookie-p">Nous utilisons des cookies pour améliorer votre expérience. En continuant à utiliser notre site, vous acceptez notre politique de confidentialité.</p>
+    <div class="button-container">
+        <button id="acceptCookiesBtn">Accepter</button>
+        <button id="refuseCookiesBtn" class="btn-refuser">Refuser</button>
+    </div>
+</div>
+
+<style>
 
 
+/* Styles de la bannière cookies */
+.cookie-banner {
+    position: fixed;
+    bottom: 20px;
+    left: 50%; /* Position from the left */
+    transform: translateX(-50%); /* Center horizontally */
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    z-index: 1000;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    max-width: 100%;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center; /* Center items inside the banner */
+}
+
+.cookie-p{
+    color:white;
+}
+
+
+    .button-container {
+        display: flex;
+        justify-content: space-between; /* Space between buttons */
+        width: 100%; /* Full width for button container */
+    }
+
+    .btn-refuser {
+        background-color: #d9534f; /* Red for refuse button */
+        color: white;
+    }
+</style>
     {% block javascripts %}
-    <!-- JavaScript inclus avec Webpack Encore -->
-    {# <script src="{{ asset('build/app.js') }}"></script>
-    <script src="{{ asset('build/script.js') }}"></script> #}
+    
     <!-- JS Bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-   <!-- Correct Bootstrap JS sans intégrité -->
+   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script>
     let inactivityTime = function () {
