--- a/templates/revetements/index.html.twig
+++ b/templates/revetements/index.html.twig
@@ -8,29 +8,29 @@
 <section class="revetement-content">
         <div class="image-section-revetement">
     <div class="main-image">
-        <img src="{{ asset('images/revetement5.jpg') }}" alt="Main Image" class="img-fluid">
+        <img src="{{ asset('images/image1.jpg') }}" alt="Main Image" class="img-fluid">
     </div>
     <div class="image-thumbnails-revetement">
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/retement1.jpg') }}" alt="Sols souples" class="img-fluid">
-            
+            <img src="{{ asset('images/image1.jpg') }}" alt="Sols souples" class="img-fluid">
+            <p>Sols souples</p>
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/revetement4.jpg') }}" alt="Carrelage" class="img-fluid">
-            
+            <img src="{{ asset('images/image1.jpg') }}" alt="Carrelage" class="img-fluid">
+            <p>Carrelage</p>
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/revetement3.jpg') }}" alt="Revêtements muraux décoratifs" class="img-fluid">
-            
+            <img src="{{ asset('images/image1.jpg') }}" alt="Revêtements muraux décoratifs" class="img-fluid">
+            <p>Revêtements muraux décoratifs</p>
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/revetement2.jpg') }}" alt="Peinture" class="img-fluid">
-           
+            <img src="{{ asset('images/image1.jpg') }}" alt="Peinture" class="img-fluid">
+            <p>Peinture</p>
         </div>
     </div>
 </div>
 
-        <div class="text-content-revetement">
+        <div class="text-content-revetement order-2 order-md-1 mt-4">
             <p>
                 Notre service de pose de sols et de revêtements muraux s’adapte à tous les styles et besoins. Nous proposons un large éventail de solutions pour habiller vos sols, allant du parquet chaleureux et classique, aux carrelages modernes et résistants, en passant par des sols en vinyle pratiques ou encore des finitions en béton ciré pour un aspect contemporain et épuré. Chaque type de sol est posé avec soin, dans le respect des normes, pour garantir une durabilité optimale.
             </p>
@@ -59,7 +59,7 @@
         <div class="col-md-3 tp">
             <h3 class="types">Peinture</h3>
             <p class="tp-revetement">La peinture est un moyen rapide et efficace de transformer vos murs. De la finition mate à la laque brillante, elle s'adapte à toutes vos envies.</p>
-            <a href="{{ path('app_peinture') }}" class="text-primary sur-peinture">+ sur peinture</a>
+            <a href="#" class="text-primary sur-peinture">+ sur peinture</a>
         </div>
     </div>
 </div>
@@ -69,19 +69,18 @@
         <div class="col-md-6 autres-services">
             <h2>Autres services</h2>
             <ul>
-            <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_demolition') }}">Démolition et curage</a></li>
-                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_maconnerie') }}">Maçonnerie</a></li>
-                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_peinture') }}">Peinture</a></li>
-                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_cloisons') }}">Cloisons mobiles et plafonds</a></li>
-                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_isolation') }}">Solutions acoustiques</a></li>
+            <li><i class="fa fa-chevron-right"></i> Démolition et curage</li>
+                <li><i class="fa fa-chevron-right"></i> Maçonnerie</li>
+                <li><i class="fa fa-chevron-right"></i> Peinture</li>
+                <li><i class="fa fa-chevron-right"></i> Cloisons mobiles et plafond</li>
+                <li><i class="fa fa-chevron-right"></i> Solutions acoustiques</li>
             </ul>
         </div>
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
-            <img src="{{ asset('images/revetement6.jpg') }}" alt="Image description" class="img-fluid">
-            <button class="dm-etude"><a href="{{ path('contact') }}">DEMANDE D'ÉTUDE</a></button>
-            
+            <img src="{{ asset('images/image1.jpg') }}" alt="Image description" class="img-fluid">
+            <button class="dm-etude">Demandez votre étude</button>
         </div>
     </div>
 </div>
