--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,15 @@
     
     
     <link rel="stylesheet" href="{{ asset('styles/app.css?v=1.1')}}">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L9E81TCXT3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-L9E81TCXT3');
+</script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
