--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -1,36 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Notre équipe{% endblock %}
+{% block title %}Rencontrez l'Équipe d'Experts de Homerenov91 - Spécialistes en Rénovation{% endblock %}
 
 {% block body %}
-<div class=" equipe container mt-5">
+<div class="equipe container mt-5">
     <h1 class="text-center team">Notre équipe</h1>
 
     <section class="team-presentation text-center my-5">
         <h2>Notre équipe, votre partenaire de confiance</h2>
         <p>
-            Chez HomeRenov91, notre équipe de professionnels qualifiés est le cœur de notre réussite. Grâce à une expertise diversifiée et une approche collaborative, nous sommes en mesure d'apporter des solutions de rénovation sur mesure à nos clients. Chaque membre de l'équipe s'investit pleinement pour garantir des résultats de haute qualité et la satisfaction totale de nos clients.
+            Chez Homerenov91, notre équipe est composée de professionnels qualifiés passionnés par leur métier. Grâce à une expertise diversifiée et une approche centrée sur la satisfaction client, nous concrétisons vos projets avec excellence et fiabilité.
         </p>
     </section>
 
     <section class="team-members text-center">
         <div class="row justify-content-center">
+            <!-- Gérante -->
             <div class="col-md-4">
                 <img src="{{ asset('images/nadia.jpg') }}" alt="TRABELSI Nadia" class="avatar">
                 <h3>TRABELSI Nadia</h3>
                 <h4>Gérante</h4>
                 <p>
-                    Nadia, forte d'une expérience solide dans le domaine de la rénovation, est une gestionnaire dévouée. Son leadership et son attention aux détails assurent la réussite des projets de l'entreprise.
+                    Nadia est une gestionnaire expérimentée, dédiée à offrir des solutions sur mesure et à superviser chaque projet avec rigueur et passion.
                 </p>
                 <p><strong>Email :</strong> homerenovations91@gmail.com</p>
                 <p><strong>Téléphone :</strong> 07 61 10 69 59</p>
             </div>
+
+            <!-- Dirigeant -->
             <div class="col-md-4">
                 <img src="{{ asset('images/wael.jpg') }}" alt="TRABELSI Wael" class="avatar">
                 <h3>TRABELSI Wael</h3>
                 <h4>Dirigeant</h4>
                 <p>
-                    Wael, avec son expertise technique, supervise les aspects opérationnels. Il s'assure que chaque chantier se déroule dans les meilleures conditions et respecte les normes de qualité.
+                    Wael veille à la coordination et au bon déroulement des chantiers, en mettant à profit son expertise technique et son souci du détail.
                 </p>
                 <p><strong>Email :</strong> homerenovations91@gmail.com</p>
                 <p><strong>Téléphone :</strong> 07 61 10 69 59</p>
