--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,7 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}inscription{% endblock %}
+{% block title %}Inscription pour un Devis ou Projet de Rénovation - Homerenov91{% endblock %}
 
+{% block head %}
+    <meta name="description" content="Découvrez nos réalisations de chantiers en aménagement et rénovation. Homerenov91 met son expertise à votre service pour chaque projet.">
+{% endblock %}
 
 {% block body %}
     <div class="container-inscription mt-5">
