--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock %}
+{% block title %}Connexion à Votre Compte Client - Accédez à Vos Projets et Factures - Homerenov91{% endblock %}
+
+{% block head %}
+    <meta name="description" content="Connectez-vous pour accéder à votre espace personnel. Gérez vos projets, demandez des devis et suivez l'avancement de vos travaux en temps réel.">
+{% endblock %}
 
 {% block body %}
     <div class="container-connexion">
