--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Homerenov91{% endblock %}</title>
+    <title>{% block title %}HomeRenov91 - Rénovation de bâtiments en Île-de-France{% endblock %}</title>
+<meta name="keywords" content="rénovation, bâtiment, Île-de-France, construction, appartement, pavillon">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -25,7 +26,7 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
     <div class="container-fluid">
         <a class="navbar-brand" href="{{ path('app_home') }}">
-            <img src="{{ asset('images/logo.jpg') }}" alt="Logo" class="logo">
+            <img src="{{ asset('images/logo.jpg') }}" alt="Logo de HomeRenov91 - Rénovation de bâtiments en Île-de-France" class="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -98,7 +99,7 @@
         <div class="footer-row">
             <!-- Logo et description -->
             <div class="footer-column">
-                <img src="{{ asset('images/logo.jpg') }}" alt="Logo de Homerenov91" class="footer-logo">
+                <img src="{{ asset('images/logo.jpg') }}" alt="Logo de HomeRenov91 - Spécialiste en rénovation et construction de bâtiments en Île-de-France" class="footer-logo">
                 <p class="footer-description">
                     HomeRenov91, spécialiste dans la rénovation et construction de bâtiments en Île-de-France. Nous transformons vos projets en réalité avec précision et soin.
                 </p>
