--- a/templates/isolation/index.html.twig
+++ b/templates/isolation/index.html.twig
@@ -1,18 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Solutions acoustiques{% endblock %}
+{% block title %}Solutions Acoustiques pour Améliorer le Confort de Vos Espaces - Homerenov91{% endblock %}
+
+{% block head %}
+    <meta name="description" content="Optimisez l'acoustique de vos espaces avec nos solutions acoustiques. Nous proposons des aménagements adaptés pour améliorer le confort sonore dans vos bureaux, salons ou pièces de vie.">
+{% endblock %}
 
 {% block body %}
  <h2 class="solutions-acoustiques">Solutions acoustiques</h2>
 <div class="isolation">
     <div class="circle-image-container">
         <div class="circle-image">
-            <img src="{{ asset('images/isolation1.jpg') }}" alt="isolation" class="img-fluid">
+            <img src="{{ asset('images/isolation1.jpg') }}" alt="Isolation acoustique dans un espace intérieur pour réduire les bruits et améliorer le confort sonore" class="img-fluid">
         </div>
     </div>
 
     <div class="text-section-acoustique">
-       
         <p>
             Les solutions acoustiques et l'isolation sont essentielles pour garantir un environnement confortable et serein, que ce soit dans les espaces de vie ou de travail. Une bonne isolation acoustique permet de réduire les bruits indésirables, favorisant ainsi la concentration et le bien-être.
         </p>
@@ -21,7 +24,7 @@
         </p>
     </div>
 </div>
-<h2 class="title-section-acoustique"> les différentes solutions acoustiques</h2>
+<h2 class="title-section-acoustique">Les différentes solutions acoustiques</h2>
 
 <div class="container-acoustique">
     <div class="card-acoustique">
@@ -50,7 +53,7 @@
     </div>
 </div>
 
-<h2 class="title-section-acoustique"> les différentes solutions d'isolation thermique</h2>
+<h2 class="title-section-acoustique">Les différentes solutions d'isolation thermique</h2>
 
 <div class="container-acoustique">
     <div class="card-acoustique">
@@ -79,6 +82,7 @@
         <p>Il existe aussi des isolants naturels comme la laine de mouton, le chanvre, la ouate de cellulose ou le liège, qui sont à la fois écologiques et efficaces pour isoler tout en respectant l'environnement.</p>
     </div>
 </div>
+
 <div class="container services">
     <div class="row">
         <!-- Autres services -->
@@ -95,7 +99,7 @@
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
-            <img src="{{ asset('images/isolation2.jpg') }}" alt="Image description" class="img-fluid">
+            <img src="{{ asset('images/isolation2.jpg') }}" alt="Exemple d'isolation thermique avec des panneaux et fenêtres à double vitrage" class="img-fluid">
             <button class="dm-etude"><a href="{{ path('contact') }}">DEMANDE D'ÉTUDE</a></button>
         </div>
     </div>
