--- a/templates/maçonnerie/index.html.twig
+++ b/templates/maçonnerie/index.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Maçonnerie{% endblock %}
+{% block title %}Services de Maçonnerie Professionnelle - Construction et Rénovation à Paris - Homerenov91{% endblock %}
+
+{% block head %}
+    <meta name="description" content="Homerenov91 propose des services de maçonnerie de qualité pour vos projets de construction et de rénovation. Nous maîtrisons les techniques les plus avancées.">
+{% endblock %}
 
 {% block body %}
 <div class="macon">
@@ -15,39 +19,33 @@
                 Que ce soit pour la construction de murs porteurs, la création d'ouvertures, la pose de cloisons ou encore la restauration de structures existantes, notre équipe de professionnels expérimentés utilise des techniques adaptées à chaque projet.
             </p>
             <p>Grâce à un savoir-faire maîtrisé et des matériaux de qualité, nous vous garantissons un résultat esthétique et conforme aux normes de sécurité en vigueur.</p>
-           
-            
 </div>
 <div class="image-section-maconnerie">
     <div class="main-image-maconnerie">
-        <img src="{{ asset('images/maconnerie4.jpg') }}" alt="Main Image" class="img-fluid">
+        <img src="{{ asset('images/maconnerie4.jpg') }}" alt="Travaux de maçonnerie réalisés par Homerenov91 dans un projet de rénovation" class="img-fluid">
     </div>
     <div class="image-thumbnails-maconnerie">
         <div class="thumbnail-item-maconnerie">
-            <img src="{{ asset('images/maconnerie3.jpg') }}" alt="Sols beton" class="img-fluid">
-            <p>Sols beton</p>
+            <img src="{{ asset('images/maconnerie3.jpg') }}" alt="Sol en béton durci pour projet de maçonnerie" class="img-fluid">
+            <p>Sols béton</p>
         </div>
         <div class="thumbnail-item-maconnerie">
-            <img src="{{ asset('images/maconnerie1.jpg') }}" alt="Murs et cloisons" class="img-fluid">
+            <img src="{{ asset('images/maconnerie1.jpg') }}" alt="Murs et cloisons montés dans une rénovation intérieure" class="img-fluid">
             <p>Murs et cloisons</p>
         </div>
         <div class="thumbnail-item-maconnerie">
-            <img src="{{ asset('images/maconnerie2.jpg') }}" alt="Terrasses" class="img-fluid">
+            <img src="{{ asset('images/maconnerie2.jpg') }}" alt="Terrasse en béton réalisée par Homerenov91" class="img-fluid">
             <p>Terrasses</p>
         </div>
-        
     </div>
 </div>
+</section>
 
-        
-    </section>
-
-    <section class="macon">
+<section class="macon">
     <div class="row">
         <!-- Première colonne : Autres services -->
         <div class="col-md-4 domaines-options">
-            
-               <h2>Autres services</h2>
+            <h2>Autres services</h2>
             <ul>
                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_demolition') }}">Démolition et curage</a></li>
                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_revetements') }}">Sols et revêtements muraux</a></li>
@@ -55,25 +53,21 @@
                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_cloisons') }}">Cloisons mobiles et plafonds</a></li>
                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_isolation') }}">Solutions acoustiques</a></li>
             </ul>
-               
-            
         </div>
 
         <!-- Deuxième colonne : Evacuation et mise en déchetterie -->
         <div class="col-md-4">
-            
             <h3>Travaux de maçonnerie</h3>
             <p>
-                Nous ne réalisons pas de gros-œuvre au sens strict (construction de bâtiments) mais nous intervenons sur tout le second œuvre en maçonnerie. Par exemple : ouverture de murs porteurs, pose d’IPN, chape de reprise de sol, murs en parpaings. Mais aussi création de structures métalliques,  modifications de plancher, cloisonnements maçonnés ou placoplâtre, etc.
+                Nous ne réalisons pas de gros-œuvre au sens strict (construction de bâtiments) mais nous intervenons sur tout le second œuvre en maçonnerie. Par exemple : ouverture de murs porteurs, pose d’IPN, chape de reprise de sol, murs en parpaings. Mais aussi création de structures métalliques, modifications de plancher, cloisonnements maçonnés ou placoplâtre, etc.
             </p>
         </div>
 
         <!-- Troisième colonne : Recyclage -->
         <div class="col-md-4">
-           
             <h3>Gros oeuvre</h3>
             <p>
-               nous intervenons également dans la création d’aménagements extérieurs tels que : construction d’annexes , terrasses (béton, bois ou composite), murs de soutènements,  carports, etc.
+               nous intervenons également dans la création d’aménagements extérieurs tels que : construction d’annexes , terrasses (béton, bois ou composite), murs de soutènements, carports, etc.
             </p>
         </div>
     </div>
