--- a/templates/revetements/index.html.twig
+++ b/templates/revetements/index.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Sols et revêtements muraux{% endblock %}
+{% block title %}Sols et Revêtements Muraux : Aménagement et Rénovation - Homerenov91{% endblock %}
+
+{% block head %}
+    <meta name="description" content="Découvrez nos services de pose de sols et de revêtements muraux : carrelage, sols souples, peinture, et bien plus pour aménager et rénover vos espaces.">
+{% endblock %}
 
 {% block body %}
 <h1 class="text-center revetement">Sols et revêtements muraux</h1>
@@ -8,37 +12,31 @@
 <section class="revetement-content">
         <div class="image-section-revetement">
     <div class="main-image">
-        <img src="{{ asset('images/image1.jpg') }}" alt="Main Image" class="img-fluid">
+        <img src="{{ asset('images/revetement5.jpg') }}" alt="Pose de revêtements muraux et sols modernes dans un espace intérieur" class="img-fluid">
     </div>
     <div class="image-thumbnails-revetement">
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Sols souples" class="img-fluid">
-            <p>Sols souples</p>
+            <img src="{{ asset('images/retement1.jpg') }}" alt="Exemple de sol souple en vinyle installé dans une pièce de vie" class="img-fluid">
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Carrelage" class="img-fluid">
-            <p>Carrelage</p>
+            <img src="{{ asset('images/revetement4.jpg') }}" alt="Carrelage moderne posé dans une salle de bain" class="img-fluid">
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Revêtements muraux décoratifs" class="img-fluid">
-            <p>Revêtements muraux décoratifs</p>
+            <img src="{{ asset('images/revetement3.jpg') }}" alt="Revêtement mural décoratif dans un salon contemporain" class="img-fluid">
         </div>
         <div class="thumbnail-item-revetement">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Peinture" class="img-fluid">
-            <p>Peinture</p>
+            <img src="{{ asset('images/revetement2.jpg') }}" alt="Application de peinture murale dans un intérieur moderne" class="img-fluid">
         </div>
     </div>
 </div>
 
-        <div class="text-content-revetement order-2 order-md-1 mt-4">
+        <div class="text-content-revetement">
             <p>
                 Notre service de pose de sols et de revêtements muraux s’adapte à tous les styles et besoins. Nous proposons un large éventail de solutions pour habiller vos sols, allant du parquet chaleureux et classique, aux carrelages modernes et résistants, en passant par des sols en vinyle pratiques ou encore des finitions en béton ciré pour un aspect contemporain et épuré. Chaque type de sol est posé avec soin, dans le respect des normes, pour garantir une durabilité optimale.
             </p>
             <p>
                 Pour les murs, nous vous offrons diverses options de revêtements muraux : du papier peint traditionnel ou vinyle, aux enduits décoratifs ou panneaux muraux innovants. Que vous souhaitiez une ambiance sobre, minimaliste ou colorée, nous vous conseillons dans vos choix et assurons une pose irréprochable pour un rendu esthétique qui s’intègre harmonieusement dans votre espace. Nos équipes interviennent sur tous types de chantiers, qu’il s’agisse de rénovations complètes ou de simples modifications d'intérieur, avec un souci constant de la qualité et de la finition.
             </p>
-            
-            
         </div>
     </section>
   
@@ -59,7 +57,7 @@
         <div class="col-md-3 tp">
             <h3 class="types">Peinture</h3>
             <p class="tp-revetement">La peinture est un moyen rapide et efficace de transformer vos murs. De la finition mate à la laque brillante, elle s'adapte à toutes vos envies.</p>
-            <a href="#" class="text-primary sur-peinture">+ sur peinture</a>
+            <a href="{{ path('app_peinture') }}" class="text-primary sur-peinture">+ sur peinture</a>
         </div>
     </div>
 </div>
@@ -69,18 +67,18 @@
         <div class="col-md-6 autres-services">
             <h2>Autres services</h2>
             <ul>
-            <li><i class="fa fa-chevron-right"></i> Démolition et curage</li>
-                <li><i class="fa fa-chevron-right"></i> Maçonnerie</li>
-                <li><i class="fa fa-chevron-right"></i> Peinture</li>
-                <li><i class="fa fa-chevron-right"></i> Cloisons mobiles et plafond</li>
-                <li><i class="fa fa-chevron-right"></i> Solutions acoustiques</li>
+            <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_demolition') }}">Démolition et curage</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_maconnerie') }}">Maçonnerie</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_peinture') }}">Peinture</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_cloisons') }}">Cloisons mobiles et plafonds</a></li>
+                <li><i class="fa fa-chevron-right"></i> <a href="{{ path('app_isolation') }}">Solutions acoustiques</a></li>
             </ul>
         </div>
 
         <!-- Image et bouton -->
         <div class="col-md-6 image-et-bouton">
-            <img src="{{ asset('images/image1.jpg') }}" alt="Image description" class="img-fluid">
-            <button class="dm-etude">Demandez votre étude</button>
+            <img src="{{ asset('images/revetement6.jpg') }}" alt="Installation de revêtements muraux et sols dans un espace moderne" class="img-fluid">
+            <button class="dm-etude"><a href="{{ path('contact') }}">DEMANDE D'ÉTUDE</a></button>
         </div>
     </div>
 </div>
